community/minuet: move from testing

--- a/community/minuet/APKBUILD
+++ b/community/minuet/APKBUILD
@@ -13,19 +13,20 @@ subpackages="$pkgname-doc $pkgname-lang $pkgname-dev"
 options="!check" # No tests
 
 build() {
-	cmake \
+	cmake -B "$builddir"/build \
 		-DCMAKE_BUILD_TYPE=None \
 		-DCMAKE_INSTALL_PREFIX=/usr \
 		-DCMAKE_INSTALL_LIBDIR=lib
-	make
+	make -C build
 }
 
 check() {
+	cd "$builddir"/build
 	CTEST_OUTPUT_ON_FAILURE=TRUE ctest
 }
 
 package() {
-	DESTDIR="$pkgdir" make install
+	DESTDIR="$pkgdir" make -C build install
 }
 
 sha512sums="8c9f39fcaaca1ea54f5ababa40890a834bf99d7920ca5d46e38e4ad2d4d527e88351378c7b2ddb5909abc25b990b234c0e1ef29ce6699b67790b54924a50cd7a  minuet-19.12.2.tar.xz"
