community/parley: move from testing

--- a/community/parley/APKBUILD
+++ b/community/parley/APKBUILD
@@ -13,19 +13,20 @@ source="https://download.kde.org/stable/release-service/$pkgver/src/parley-$pkgv
 subpackages="$pkgname-doc $pkgname-lang"
 
 build() {
-	cmake \
+	cmake -B "$builddir"/build \
 		-DCMAKE_BUILD_TYPE=None \
 		-DCMAKE_INSTALL_PREFIX=/usr \
 		-DCMAKE_INSTALL_LIBDIR=lib
-	make
+	make -C build
 }
 
 check() {
+	cd "$builddir"/build
 	CTEST_OUTPUT_ON_FAILURE=TRUE xvfb-run ctest
 }
 
 package() {
-	DESTDIR="$pkgdir" make install
+	DESTDIR="$pkgdir" make -C build install
 }
 
 sha512sums="bae9b6778ebf64fcc59f4c5e42f9d612fb482fe4819808a67ce23a006d459681544401812420e517431a47abb082e9b46b76241a37db50f67620e3ef855487d9  parley-19.12.2.tar.xz"
