community/rocs: move from testing

--- a/community/rocs/APKBUILD
+++ b/community/rocs/APKBUILD
@@ -13,14 +13,16 @@ source="https://download.kde.org/stable/release-service/$pkgver/src/rocs-$pkgver
 subpackages="$pkgname-doc $pkgname-lang $pkgname-dev"
 
 build() {
-	cmake \
+	cmake -B "$builddir"/build \
 		-DCMAKE_BUILD_TYPE=None \
 		-DCMAKE_INSTALL_PREFIX=/usr \
 		-DCMAKE_INSTALL_LIBDIR=lib
-	make
+	make -C build
 }
 
 check() {
+	cd "$builddir"/build
+
 	# TestTgfFileFormat, TestRocs1FileFormat, TestRocs2FileFormat, and
 	# graphtheory-test_graphoperations are broken
 	# TestProject requires OpenGL
@@ -39,7 +41,7 @@ check() {
 }
 
 package() {
-	DESTDIR="$pkgdir" make install
+	DESTDIR="$pkgdir" make -C build install
 }
 
 sha512sums="d42bc5c8d53143579152112f50a85f234e5e43ad34699384a5801b0863b02ec34c26cfa158410a4f2cac108cd3e0dde155ed0f799586dbf9beed02e5a323bd71  rocs-19.12.2.tar.xz"
