community/step: move from testing

--- a/community/step/APKBUILD
+++ b/community/step/APKBUILD
@@ -12,19 +12,20 @@ source="https://download.kde.org/stable/release-service/$pkgver/src/step-$pkgver
 subpackages="$pkgname-doc $pkgname-lang"
 
 build() {
-	cmake \
+	cmake -B "$builddir"/build \
 		-DCMAKE_BUILD_TYPE=None \
 		-DCMAKE_INSTALL_PREFIX=/usr \
 		-DCMAKE_INSTALL_LIBDIR=lib
-	make
+	make -C build
 }
 
 check() {
+	cd "$builddir"/build
 	CTEST_OUTPUT_ON_FAILURE=TRUE ctest
 }
 
 package() {
-	DESTDIR="$pkgdir" make install
+	DESTDIR="$pkgdir" make -C build install
 }
 
 sha512sums="81378ea5850369c3cb6c72d8830cfef2669cbdbba4753cbdad9410ad0667a7711685d0042fe9acc47895ff441ad70dba460767c4b6f027e539b3c9a0a8c1c707  step-19.12.2.tar.xz"
