--- a/main/libevdev/APKBUILD
+++ b/main/libevdev/APKBUILD
@@ -1,38 +1,31 @@
 # Maintainer: Natanael Copa <ncopa@alpinelinux.org>
 pkgname=libevdev
-pkgver=1.8.0
+pkgver=1.9.0
 pkgrel=0
 pkgdesc="Kernel Evdev Device Wrapper Library"
 url="https://www.freedesktop.org/wiki/Software/libevdev"
 arch="all"
 license="MIT"
 options="!check"  # Requires CONFIG_INPUT_UINPUT in kernel
-makedepends="python3 linux-headers"
-checkdepends="check-dev"
-subpackages="$pkgname-static $pkgname-dev $pkgname-doc"
+makedepends="meson python3 linux-headers doxygen"
+subpackages="$pkgname-dev $pkgname-doc"
 source="https://freedesktop.org/software/libevdev/libevdev-$pkgver.tar.xz"
 
 build() {
-	cd "$builddir"
-	./configure \
-		--build=$CBUILD \
-		--host=$CHOST \
+	meson \
 		--prefix=/usr \
 		--sysconfdir=/etc \
 		--mandir=/usr/share/man \
-		--infodir=/usr/share/info \
-		--localstatedir=/var
-	make
-}
-
-check() {
-	cd "$builddir"
-	make check
+		--localstatedir=/var \
+		--buildtype=plain \
+		-Dtests=disabled \
+		-Ddocumentation=enabled \
+		. output
+	ninja -C output
 }
 
 package() {
-	cd "$builddir"
-	make DESTDIR="$pkgdir" install
+	DESTDIR="$pkgdir" ninja -C output install
 }
 
-sha512sums="8d285632f4fe87c01e81f94e514bec4e37fed4bc44d6d38b9297dba1114e42f6ed8d143fc05f3d0e8d51b08b659e34481dc4c65f60421c54e2f3e11efbafdeb4  libevdev-1.8.0.tar.xz"
+sha512sums="6e7589b5776437ac23fbf65b3194fb1dd3a68a294696145060cdd97bcdeb9b04f355f2be028dc1a5efe98ef2cafca15e4f61115edf5d62591e3a8944dc95942a  libevdev-1.9.0.tar.xz"
