main/lua-filesystem: enable luajit on s390x, fix license

--- a/main/lua-filesystem/APKBUILD
+++ b/main/lua-filesystem/APKBUILD
@@ -4,22 +4,14 @@ _pkgname=luafilesystem
 pkgver=1.7.0.2
 _pkgver=${pkgver//./_}
 _rockver=${pkgver%.*}-${pkgver##*.}
-pkgrel=0
+pkgrel=1
 pkgdesc="Filesystem functions for Lua"
 url="http://keplerproject.github.io/luafilesystem/"
 arch="all"
-license="GPL"
-checkdepends=""
-makedepends=""
-subpackages=""
+license="MIT"
+checkdepends="luajit"
 source="$_pkgname-$pkgver.tar.gz::https://github.com/keplerproject/$_pkgname/archive/v$_pkgver.tar.gz"
 builddir="$srcdir/$_pkgname-$_pkgver"
-
-# luajit is not available for selected arches
-case "$CARCH" in
-	s390x) _luajit="";;
-	*) checkdepends="$checkdepends luajit" _luajit="jit";;
-esac
 
 _luaversions="5.1 5.2 5.3"
 for _v in $_luaversions; do
@@ -44,7 +36,7 @@ build() {
 }
 
 check() {
-	local lver; for lver in $_luaversions $_luajit; do
+	local lver; for lver in $_luaversions jit; do
 		msg "Testing on lua$lver"
 
 		cd "$builddir-${lver/jit/5.1}"
