main/lua-feedparser: enable luajit on s390x and fix license=

--- a/main/lua-feedparser/APKBUILD
+++ b/main/lua-feedparser/APKBUILD
@@ -2,22 +2,17 @@
 pkgname=lua-feedparser
 _rockname=feedparser
 pkgver=0.71
-pkgrel=1
+pkgrel=2
 pkgdesc="A decent RSS and Atom XML feed parser"
 url="https://github.com/slact/lua-feedparser"
 arch="noarch"
-license="BSD"
+license="BSD-3-Clause"
 depends="lua lua-expat"
+checkdepends="luajit"
+source="$pkgname-$pkgver.tar.gz::https://github.com/slact/lua-feedparser/archive/$pkgver.tar.gz"
+
 provides="$pkgname-common=$pkgver-r$pkgrel"  # for backward compatibility
 replaces="$pkgname-common"  # for backward compatibility
-source="$pkgname-$pkgver.tar.gz::https://github.com/slact/$pkgname/archive/$pkgver.tar.gz"
-builddir="$srcdir/$pkgname-$pkgver"
-
-# luajit is not available for selected arches
-case "$CARCH" in
-	s390x) _luajit="";;
-	*) checkdepends="$checkdepends luajit" _luajit="jit";;
-esac
 
 _luaversions="5.1 5.2 5.3"
 for _v in $_luaversions; do
@@ -26,9 +21,7 @@ for _v in $_luaversions; do
 done
 
 check() {
-	cd "$builddir"
-
-	local lver; for lver in $_luaversions $_luajit; do
+	local lver; for lver in $_luaversions jit; do
 		msg "Testing on Lua $lver"
 		make test LUA_BIN=lua$lver
 	done
@@ -37,8 +30,6 @@ check() {
 package() {
 	local lmod_dir="$pkgdir/usr/share/lua/common"
 	local rockdir="$pkgdir/usr/lib/luarocks/rocks-common/$_rockname/$pkgver-3"
-
-	cd "$builddir"
 
 	mkdir -p "$lmod_dir"
 	make LUA_DIR="$lmod_dir" install
