testing/lua-xml: enable luajit on s390x and fix license

--- a/testing/lua-xml/APKBUILD
+++ b/testing/lua-xml/APKBUILD
@@ -3,23 +3,15 @@
 pkgname=lua-xml
 _rockname=xml
 pkgver=1.1.3
-pkgrel=0
+pkgrel=1
 pkgdesc="Very fast XML parser for Lua based on RapidXML"
 url="https://github.com/lubyk/xml"
 arch="all"
-license="MIT BSL-1.0"
+license="MIT"
 depends="lua-lub"
-checkdepends="lua-lut"
-makedepends=""
-subpackages=""
-source="https://github.com/lubyk/$_rockname/archive/REL-$pkgver/$pkgname-$pkgver.tar.gz"
+checkdepends="lua-lut luajit"
+source="https://github.com/lubyk/$_rockname/archive/REL-$pkgver/lua-xml-$pkgver.tar.gz"
 builddir="$srcdir/$_rockname-REL-$pkgver"
-
-# luajit is not available for s390x
-case "$CARCH" in
-	s390x|aarch64) _luajit="";;
-	*) checkdepends="$checkdepends luajit" _luajit="jit";;
-esac
 
 _luaversions="5.1 5.2 5.3"
 for _v in $_luaversions; do
@@ -28,8 +20,6 @@ for _v in $_luaversions; do
 done
 
 build() {
-	cd "$builddir"
-
 	local lver; for lver in $_luaversions; do
 		msg "Building for Lua $lver..."
 
@@ -44,9 +34,7 @@ build() {
 }
 
 check() {
-	cd "$builddir"
-
-	local lver; for lver in $_luaversions $_luajit; do
+	local lver; for lver in $_luaversions jit; do
 		msg "Testing on lua$lver"
 
 		ln -sf ../build-${lver/jit/5.1}/lib/lua/${lver/jit/5.1}/xml/core.so xml/
