--- a/community/lua-depgraph/APKBUILD
+++ b/community/lua-depgraph/APKBUILD
@@ -9,16 +9,9 @@ url="https://github.com/mpeterv/depgraph"
 arch="noarch"
 license="MIT"
 depends="lua lua-argparse lua-filesystem"
-makedepends=""
-checkdepends="lua-busted"
+checkdepends="lua-busted luajit"
 source="$pkgname-$pkgver.tar.gz::https://github.com/mpeterv/$_pkgname/archive/$pkgver.tar.gz"
 builddir="$srcdir/$_pkgname-$pkgver"
-
-# luajit is not available for selected arches
-case "$CARCH" in
-	s390x) _luajit="";;
-	*) checkdepends="$checkdepends luajit" _luajit="jit";;
-esac
 
 _luaversions="5.1 5.2 5.3"
 for _v in $_luaversions; do
@@ -27,10 +20,9 @@ for _v in $_luaversions; do
 done
 
 check() {
-	cd "$builddir"
 	mkdir -p .bin
 
-	local lver; for lver in $_luaversions $_luajit; do
+	local lver; for lver in $_luaversions jit; do
 		msg "Testing on lua$lver"
 
 		ln -sf /usr/bin/lua$lver .bin/lua
@@ -41,8 +33,6 @@ check() {
 }
 
 package() {
-	cd "$builddir"
-
 	install -m 755 -D bin/luadepgraph.lua "$pkgdir"/usr/bin/luadepgraph
 }
 
