community/lua-dromozoa-utf8: enable luajit on s390x

--- a/community/lua-dromozoa-utf8/APKBUILD
+++ b/community/lua-dromozoa-utf8/APKBUILD
@@ -3,22 +3,15 @@
 pkgname=lua-dromozoa-utf8
 _pkgname=dromozoa-utf8
 pkgver=1.15
-pkgrel=0
+pkgrel=1
 pkgdesc="Lua 5.3 compatible pure-Lua UTF-8 implementation"
 url="https://github.com/dromozoa/dromozoa-utf8/"
 arch="noarch"
-license="GPL-3.0"
-depends=""
-checkdepends=""
+license="GPL-3.0-or-later"
+checkdepends="luajit"
 source="$pkgname-$pkgver.tar.gz::https://github.com/dromozoa/$_pkgname/archive/v$pkgver.tar.gz
 	test.sh.patch"
 builddir="$srcdir/$_pkgname-$pkgver"
-
-# luajit is not available for selected arches
-case "$CARCH" in
-	s390x) _luajit="";;
-	*) checkdepends="$checkdepends luajit" _luajit="jit";;
-esac
 
 _luaversions="5.1 5.2 5.3"
 for _v in $_luaversions; do
@@ -28,9 +21,7 @@ done
 
 check() {
 	local out
-	cd "$builddir"
-
-	local lver; for lver in $_luaversions $_luajit; do
+	local lver; for lver in $_luaversions jit; do
 		msg "Testing on lua$lver"
 		./test.sh lua$lver
 	done
