main/lua-penlight: enable luajit on s390x

--- a/main/lua-penlight/APKBUILD
+++ b/main/lua-penlight/APKBUILD
@@ -8,17 +8,13 @@ url="http://stevedonovan.github.io/Penlight"
 arch="noarch"
 license="MIT"
 depends="lua lua-filesystem"
-provides="$pkgname-shared=$pkgver-r$pkgrel"  # for backward compatibility
-replaces="$pkgname-shared"  # for backward compatibility
+checkdepends="luajit"
 subpackages="$pkgname-doc"
 source="$_rockname-$pkgver.tar.gz::https://github.com/stevedonovan/Penlight/archive/$pkgver.tar.gz"
 builddir="$srcdir/Penlight-$pkgver"
 
-# luajit is not available for selected arches
-case "$CARCH" in
-	s390x) _luajit="";;
-	*) checkdepends="$checkdepends luajit" _luajit="jit";;
-esac
+provides="$pkgname-shared=$pkgver-r$pkgrel"  # for backward compatibility
+replaces="$pkgname-shared"  # for backward compatibility
 
 _luaversions="5.1 5.2 5.3"
 for _v in $_luaversions; do
@@ -27,9 +23,7 @@ for _v in $_luaversions; do
 done
 
 check() {
-	cd "$builddir"
-
-	local lver; for lver in $_luaversions $_luajit; do
+	local lver; for lver in $_luaversions jit; do
 		msg "Testing on Lua $lver"
 		lua$lver run.lua tests
 	done
@@ -39,8 +33,6 @@ package() {
 	local lmod_dir="$pkgdir/usr/share/lua/common"
 	local rockdir="$pkgdir/usr/lib/luarocks/rocks-common/$_rockname/$pkgver-1"
 	local docdir="$pkgdir/usr/share/doc/$pkgname"
-
-	cd "$builddir"
 
 	mkdir -p "$lmod_dir" "$docdir"
 	cp -r lua/pl "$lmod_dir"/
