--- a/main/lua-stringy/APKBUILD
+++ b/main/lua-stringy/APKBUILD
@@ -8,6 +8,7 @@ pkgdesc="Lua string utility library"
 url="https://github.com/brentp/lua-stringy/"
 arch="all"
 license="MIT"
+checkdepends="luajit"
 source="$pkgname-$pkgver.tar.gz::https://github.com/brentp/lua-stringy/archive/v$_pkgver.tar.gz
 	makefile.patch"
 builddir="$srcdir/$pkgname-$_pkgver/stringy"
@@ -39,7 +40,7 @@ build() {
 }
 
 check() {
-	local lver; for lver in $_luaversions $_luajit; do
+	local lver; for lver in $_luaversions jit; do
 		msg "Testing on lua$lver..."
 		cd "$builddir-${lver/jit/5.1}"
 		lua$lver stringy_test.lua
