--- a/community/lua-brieflz/APKBUILD
+++ b/community/lua-brieflz/APKBUILD
@@ -9,14 +9,11 @@ url="https://github.com/jirutka/brieflz.lua"
 arch="all"
 license="MIT"
 checkdepends="lua-basexx lua-busted moonscript"
-makedepends=""
-subpackages=""
 source="$pkgname-$pkgver.tar.gz::https://github.com/jirutka/$_pkgname/archive/v$pkgver.tar.gz"
 builddir="$srcdir/$_pkgname-$pkgver"
 
-# luajit is not available for s390x
 case "$CARCH" in
-	s390x|aarch64) _luajit="";;
+	aarch64) _luajit="";;
 	*) checkdepends="$checkdepends luajit" _luajit="jit";;
 esac
 
@@ -28,8 +25,6 @@ for _v in $_luaversions; do
 done
 
 build() {
-	cd "$builddir"
-
 	local lver; for lver in $_luaversions; do
 		msg "Building for Lua $lver..."
 
@@ -43,8 +38,6 @@ build() {
 }
 
 check() {
-	cd "$builddir"
-
 	local lver; for lver in $_luaversions $_luajit; do
 		msg "Testing on lua$lver"
 
