--- a/testing/netdata/APKBUILD
+++ b/testing/netdata/APKBUILD
@@ -1,7 +1,7 @@
 # Contributor: Carlo Landmeter <clandmeter@gmail.com>
 # Maintainer: Kevin Daudt <kdaudt@alpinelinux.org>
 pkgname=netdata
-pkgver=1.19.0
+pkgver=1.20.0
 pkgrel=0
 pkgdesc="Real-time performance monitoring"
 url="https://www.netdata.cloud/"
@@ -9,7 +9,7 @@ license="GPL-3.0-or-later"
 arch="all"
 depends="bash"
 makedepends="zlib-dev e2fsprogs-dev linux-headers libcap-dev automake autoconf
-	openssl-dev"
+	openssl-dev libuv-dev"
 pkgusers="netdata"
 pkggroups="netdata"
 subpackages="$pkgname-openrc $pkgname-nodejs::noarch $pkgname-python::noarch"
@@ -43,8 +43,6 @@ check() {
 package() {
 	make DESTDIR="$pkgdir" install
 	chgrp -R $pkggroups "$pkgdir"/usr/share/webapss/netdata
-	chown -R $pkgusers:$pkggroups $pkgdir/var/lib/netdata \
-		$pkgdir/var/cache/netdata
 	install -Dm755 $srcdir/$pkgname.initd \
 		$pkgdir/etc/init.d/$pkgname
 	install -Dm644 ./system/netdata.conf $pkgdir/etc/netdata/netdata.conf
@@ -53,7 +51,6 @@ package() {
 	setcap cap_dac_read_search,cap_sys_ptrace+ep \
 		"$pkgdir"/usr/libexec/netdata/plugins.d/apps.plugin
 
-	install -d -Dm0750 -o netdata -g netdata "$pkgdir"/var/lib/netdata
 	install -d -Dm0750 -o netdata -g netdata "$pkgdir"/var/log/netdata
 	install -d -Dm0750 -o netdata -g netdata "$pkgdir"/var/cache/netdata
 }
@@ -96,5 +93,5 @@ python() {
 		$subpkgdir/usr/lib/netdata/conf.d
 }
 
-sha512sums="026ae159d8ed52a30e406c110c2732e54e50f070865ba3e430df73e4df40387105053e750ca6029cfbc7f40a2c05b7fb6ba4e3e4a7070822c7eec4c1a4712aea  netdata-1.19.0.tar.gz
+sha512sums="ada398cdccf1b1b4dbac5b24d4539f86aafb964458aa4f3bdfac336362504aab6d74b7f2f12bad18b62a44bb62d1a2a8ddd0c2ed80a7c16bc388854d4210bcb6  netdata-1.20.0.tar.gz
 98dd8f188dfffe1221d05a4dd369e8f4f8dc2bf7a722ac8769afd351324b53b37c5675e705a4d42d20ce93ea9497fda9eb2457edaa500d4e72c9f1350b1d4652  netdata.initd"
