testing/py3-enchant: upgrade to 3.0.1

--- a/testing/py3-enchant/APKBUILD
+++ b/testing/py3-enchant/APKBUILD
@@ -2,18 +2,16 @@
 # Maintainer: Fabian Affolter <fabian@affolter-engineering.ch>
 pkgname=py3-enchant
 _pkgname=pyenchant
-pkgver=2.0.0
-pkgrel=3
-pkgdesc="A spellchecking library for Python"
+pkgver=3.0.1
+pkgrel=0
+pkgdesc="Spellchecking library for Python"
 options="!check" # No testsuite
 url="https://github.com/rfk/pyenchant"
 arch="noarch"
 license="LGPL-2.0-or-later"
 depends="enchant2 python3"
 makedepends="py3-setuptools"
-source="https://files.pythonhosted.org/packages/source/${_pkgname:0:1}/$_pkgname/$_pkgname-$pkgver.tar.gz
-	enchant-2.patch
-	"
+source="https://files.pythonhosted.org/packages/source/${_pkgname:0:1}/$_pkgname/$_pkgname-$pkgver.tar.gz"
 builddir="$srcdir"/$_pkgname-$pkgver
 
 replaces="py-enchant" # Backwards compatibility
@@ -27,5 +25,4 @@ package() {
 	python3 setup.py install --prefix=/usr --root="$pkgdir"
 }
 
-sha512sums="c985714bc8ad69b6580fa1dd546243da5f3f92e8681d846ed265b086c486ae7ed33754fba303b450be4c0cb20e975a9a10efbeb700ea5213a11ed00612a93af0  pyenchant-2.0.0.tar.gz
-c6dc74e60c684b5606b681096d740814a5f138e9caf8ad2f41d9e467c820d46bab6b3d449a99dc17e4b1e1b89964d1fc4248c55a600c977ee6269cddb46ad596  enchant-2.patch"
+sha512sums="93a37236b6fe1e483e5f6dcecb1d57abcc68bda2d46df7bd258e36f98a0ceff1af50241f673ee4cedc8dd38d2bf1e53314d4e8ccf3d6bc98c6c9df7aadf849f7  pyenchant-3.0.1.tar.gz"
