community/cesnet-tcs-cli: fix openssl command for generating EC key

--- a/community/cesnet-tcs-cli/APKBUILD
+++ b/community/cesnet-tcs-cli/APKBUILD
@@ -2,18 +2,21 @@
 # Maintainer: Jakub Jirutka <jakub@jirutka.cz>
 pkgname=cesnet-tcs-cli
 pkgver=0.2.0
-pkgrel=0
+pkgrel=1
 pkgdesc="Client utility for CESNET TCS API"
 url="https://github.com/jirutka/cesnet-tcs-cli"
 arch="noarch"
 license="MIT"
 depends="ca-certificates curl openssl"
 options="!check"  # no tests provided
-source="https://github.com/jirutka/$pkgname/archive/v$pkgver/$pkgname-$pkgver.tar.gz"
+source="https://github.com/jirutka/$pkgname/archive/v$pkgver/$pkgname-$pkgver.tar.gz
+	fix-genkey-ec.patch
+	"
 builddir="$srcdir/$pkgname-$pkgver"
 
 package() {
 	make install DESTDIR="$pkgdir" prefix=/usr
 }
 
-sha512sums="006015d8f0ba0f2696c6801258afe9ef62c4a2d55cfa1a1300e9d1a80fef6f5bc62f283e5f8deffe48773b1ac9369c59bacf6ab9a127c152133ecfc314ed52e8  cesnet-tcs-cli-0.2.0.tar.gz"
+sha512sums="006015d8f0ba0f2696c6801258afe9ef62c4a2d55cfa1a1300e9d1a80fef6f5bc62f283e5f8deffe48773b1ac9369c59bacf6ab9a127c152133ecfc314ed52e8  cesnet-tcs-cli-0.2.0.tar.gz
+429e689ec782e7e5ef3e36d5c7038c9a17a5da72f96aac00ea2f878151d8ec4dca52f78fa0347a0acb046a1134b22c4345d2b13203ea59336e5d62a44ec56703  fix-genkey-ec.patch"
