community/qt5-qtwebengine: add -dbg subpackage

--- a/community/qt5-qtwebengine/APKBUILD
+++ b/community/qt5-qtwebengine/APKBUILD
@@ -1,7 +1,7 @@
 # Maintainer: Natanael Copa <ncopa@alpinelinux.org>
 pkgname=qt5-qtwebengine
 pkgver=5.14.1
-pkgrel=0
+pkgrel=1
 pkgdesc="Qt5 - QtWebEngine components"
 url="https://www.qt.io/developers/"
 # ppc64le, s390x: not supported
@@ -48,7 +48,7 @@ makedepends="$depends_dev
 	zlib-dev
 	python2
 	"
-subpackages="$pkgname-dev"
+subpackages="$pkgname-dev $pkgname-dbg"
 
 _ver=${pkgver/_/-}
 _ver=${_ver/beta0/beta}
