main/lua-penlight: upgrade to 1.7.0

--- a/main/lua-penlight/APKBUILD
+++ b/main/lua-penlight/APKBUILD
@@ -1,9 +1,10 @@
 # Maintainer: Natanael Copa <ncopa@alpinelinux.org>
 pkgname=lua-penlight
 _rockname=penlight
-pkgver=1.5.4
-pkgrel=2
+pkgver=1.7.0
+pkgrel=0
 pkgdesc="Lua libraries for extended operations on tables, lists and strings"
+options="!check" # Requires lua-coveralls
 url="http://stevedonovan.github.io/Penlight"
 arch="noarch"
 license="MIT"
@@ -42,4 +43,4 @@ package() {
 	echo 'rock_manifest = {}' > "$rockdir"/rock_manifest
 }
 
-sha512sums="c46e7875410a90390bfbf010a53f1d536475e2094668722618d03951caad0fcb0674c9bc7119a0753e4ed3df9e4d70fef828ba4c6c24e8ada4036948d2432519  penlight-1.5.4.tar.gz"
+sha512sums="edeb09307c9feb5da6bccd82216a6ad71db988c433245d72d28abb6c555004f77eebba556928b0912937b29ef93e065ad491368041e17730610813de8e595d7d  penlight-1.7.0.tar.gz"
