community/upx: add secinfo

--- a/community/upx/APKBUILD
+++ b/community/upx/APKBUILD
@@ -14,6 +14,13 @@ source="https://github.com/upx/upx/releases/download/v$pkgver/upx-$pkgver-src.ta
 	0001-rm-broken-whitespace-check.patch"
 builddir="$srcdir/$pkgname-$pkgver-src"
 
+# secfixes:
+#   3.96-r0:
+#     - CVE-2018-11243
+#     - CVE-2019-14296
+#     - CVE-2019-20021
+#     - CVE-2019-20053
+
 build() {
 	make CXXFLAGS_OPTIMIZE= UPX_LZMADIR="$srcdir" all
 }
