--- a/community/yaml-cpp/APKBUILD
+++ b/community/yaml-cpp/APKBUILD
@@ -2,7 +2,7 @@
 # Maintainer: Jakub Jirutka <jakub@jirutka.cz>
 pkgname=yaml-cpp
 pkgver=0.6.3
-pkgrel=0
+pkgrel=1
 pkgdesc="YAML parser and emitter in C++ matching YAML 1.2 spec"
 url="https://github.com/jbeder/yaml-cpp"
 arch="all"
@@ -13,21 +13,19 @@ source="https://github.com/jbeder/yaml-cpp/archive/yaml-cpp-$pkgver.tar.gz"
 builddir="$srcdir/$pkgname-$pkgname-$pkgver"
 
 build() {
-	mkdir -p build && cd build
-	cmake .. \
+	cmake -B build . \
+		-DCMAKE_BUILD_TYPE=None \
 		-DCMAKE_INSTALL_PREFIX=/usr \
 		-DYAML_BUILD_SHARED_LIBS=ON
-	make
+	make -C build
 }
 
 check() {
-	cd "$builddir"/build
-	make test
+	make -C build test
 }
 
 package() {
-	cd "$builddir"/build
-	make DESTDIR="$pkgdir" install
+	make -C build DESTDIR="$pkgdir" install
 }
 
 sha512sums="68b9ce987cabc1dec79382f922de20cc2c222cb9c090ecb93dc686b048da5c917facf4fce6d8f72feea44b61e5a6770ed3b0c199c4cd4e6bde5b6245c09f8e49  yaml-cpp-0.6.3.tar.gz"
