--- a/main/yajl/APKBUILD
+++ b/main/yajl/APKBUILD
@@ -1,18 +1,14 @@
 # Maintainer: Natanael Copa <ncopa@alpinelinux.org>
 pkgname=yajl
 pkgver=2.1.0
-pkgrel=0
+pkgrel=1
 pkgdesc="Yet Another JSON Library (YAJL)"
 url="http://lloyd.github.com/yajl/"
 arch="all"
-license="BSD"
-depends=""
+license="MIT"
 makedepends="cmake"
-install=""
 subpackages="$pkgname-dev $pkgname-tools"
 source="https://dev.alpinelinux.org/archive/yajl/yajl-$pkgver.tar.gz"
-
-_builddir="$srcdir"/yajl-$pkgver
 
 # How to create archive from git:
 #
@@ -29,37 +25,30 @@ snapshot() {
 	mkdir -p "$srcdir"
 	cd "${SRCDEST:-$srcdir}"
 	if ! [ -d "$_gitrepo" ]; then
-		git clone --bare  $_giturl || return 1
+		git clone --bare  $_giturl
 	else
-		git --git-dir=$_gitrepo fetch || return 1
-        fi
+		git --git-dir=$_gitrepo fetch
+	fi
 
-        git --git-dir=$_gitrepo archive --prefix=$pkgname-$pkgver/ \
-		-o "$SRCDEST"/$_tarball $_gittag || return 1
+	git --git-dir=$_gitrepo archive --prefix=$pkgname-$pkgver/ \
+		-o "$SRCDEST"/$_tarball $_gittag
 
 	msg "Uploading $_tarball"
-        scp "$SRCDEST"/$_tarball dev.alpinelinux.org:/archive/$pkgname/
-}
-
-prepare() {
-	local i
-	cd "$_builddir"
-	for i in $source; do
-		case $i in
-		*.patch) msg $i; patch -p1 -i "$srcdir"/$i || return 1;;
-		esac
-	done
+	scp "$SRCDEST"/$_tarball dev.alpinelinux.org:/archive/$pkgname/
 }
 
 build() {
-	cd "$_builddir"
-	cmake -DCMAKE_INSTALL_PREFIX="/usr" . || return 1
-	make
+	cmake -B build . \
+		-DCMAKE_BUILD_TYPE=None \
+		-DCMAKE_INSTALL_LIBDIR=lib \
+		-DCMAKE_INSTALL_PREFIX=/usr
+	make -C build
 }
 
 package() {
-	cd "$_builddir"
-	make install DESTDIR="$pkgdir" || return 1
+	make install -C build DESTDIR="$pkgdir"
+
+	mkdir -p "$pkgdir"/usr/lib
 	mv "$pkgdir"/usr/share/pkgconfig "$pkgdir"/usr/lib/
 }
 
