--- a/main/taskd/APKBUILD
+++ b/main/taskd/APKBUILD
@@ -3,7 +3,7 @@
 # Maintainer: Natanael Copa <ncopa@alpinelinux.org>
 pkgname=taskd
 pkgver=1.1.0
-pkgrel=6
+pkgrel=7
 pkgdesc="Taskserver synchronises taskwarrior across multiple clients"
 url="https://taskwarrior.org"
 arch="all"
@@ -15,29 +15,30 @@ pkgusers="taskd"
 pkggroups="taskd"
 install="$pkgname.pre-install"
 subpackages="$pkgname-doc $pkgname-pki::noarch $pkgname-openrc"
-source="https://taskwarrior.org/download/${pkgname}-${pkgver}.tar.gz
+source="https://taskwarrior.org/download/taskd-$pkgver.tar.gz
 	Path.cpp.patch
 	Directory.cpp.patch
-	taskd.initd"
+	taskd.initd
+	"
 
 build() {
-	cd "$builddir"
-	cmake . -DCMAKE_INSTALL_PREFIX=/usr
-	make
+	cmake -B build . \
+		-DCMAKE_INSTALL_PREFIX=/usr \
+		-DCMAKE_BUILD_TYPE=None
+	make -C build
+}
+
+package() {
+	make -C build DESTDIR="$pkgdir" install
+	install -dm700 -o taskd -g taskd "$pkgdir"/var/lib/$pkgname
+	install -Dm755 "$srcdir"/taskd.initd "$pkgdir"/etc/init.d/$pkgname
 }
 
 pki() {
 	pkgdesc="Tools for taskd PKI management"
 	depends="taskd gnutls-utils"
 	mkdir -p "$subpkgdir"/usr/share/taskd
-	mv "${builddir}/pki" "$subpkgdir"/usr/share/taskd
-}
-
-package() {
-	cd "$builddir"
-	make DESTDIR="$pkgdir" install
-	install -dm700 -o taskd -g taskd "$pkgdir"/var/lib/$pkgname
-	install -Dm755 "$srcdir"/taskd.initd "$pkgdir"/etc/init.d/$pkgname
+	mv "$builddir/pki" "$subpkgdir"/usr/share/taskd
 }
 
 sha512sums="df2349c354258fd1b014b1a9c78f68dc10c9e5a48357e282e8a760cf4e4aaf4d36486796ad094ee2b050e7506195b778e3316c90ef543a2f8242de313daa13aa  taskd-1.1.0.tar.gz
