--- a/main/soxr/APKBUILD
+++ b/main/soxr/APKBUILD
@@ -2,7 +2,7 @@
 # Maintainer: Francesco Colista <fcolista@alpinelinux.org>
 pkgname=soxr
 pkgver=0.1.3
-pkgrel=1
+pkgrel=2
 pkgdesc="High quality, one-dimensional sample-rate conversion library"
 url="https://sourceforge.net/projects/soxr"
 arch="all"
@@ -10,7 +10,7 @@ license="LGPL-2.1-or-later"
 depends_dev="cmake"
 makedepends="$depends_dev"
 subpackages="$pkgname-doc $pkgname-static $pkgname-dev"
-source="$pkgname-$pkgver.tar.xz::https://sourceforge.net/projects/$pkgname/files/$pkgname-$pkgver-Source.tar.xz/download"
+source="$pkgname-$pkgver.tar.xz::https://sourceforge.net/projects/soxr/files/soxr-$pkgver-Source.tar.xz/download"
 builddir="$srcdir/$pkgname-$pkgver-Source"
 
 build() {
@@ -22,6 +22,7 @@ build() {
 		-DCMAKE_INSTALL_PREFIX:PATH=/usr \
 		-DBUILD_SHARED_LIBS=False \
 		-DBUILD_TESTS=ON \
+		-DCMAKE_BUILD_TYPE=None \
 		..
 	make
 
@@ -30,6 +31,7 @@ build() {
 		-DCMAKE_INSTALL_PREFIX:PATH=/usr \
 		-DBUILD_SHARED_LIBS=True \
 		-DBUILD_TESTS=ON \
+		-DCMAKE_BUILD_TYPE=None \
 		..
 	make
 }
