main/rabbitmq-c: modernize

--- a/main/rabbitmq-c/APKBUILD
+++ b/main/rabbitmq-c/APKBUILD
@@ -2,7 +2,7 @@
 # Maintainer: Fabio Ribeiro <fabiorphp@gmail.com>
 pkgname=rabbitmq-c
 pkgver=0.10.0
-pkgrel=0
+pkgrel=1
 pkgdesc="RabbitMQ C client"
 url="https://github.com/alanxz/rabbitmq-c"
 arch="all"
@@ -13,8 +13,8 @@ subpackages="$pkgname-utils $pkgname-doc::noarch $pkgname-dev"
 source="$pkgname-$pkgver.tar.gz::https://github.com/alanxz/rabbitmq-c/archive/v$pkgver.tar.gz"
 
 build() {
-	mkdir -p build && cd build
-	cmake .. \
+	cmake -B build . \
+		-DCMAKE_BUILD_TYPE=None \
 		-DCMAKE_INSTALL_PREFIX=/usr \
 		-DCMAKE_INSTALL_LIBDIR=lib \
 		-DCMAKE_C_FLAGS="$CFLAGS" \
@@ -23,17 +23,16 @@ build() {
 		-DENABLE_SSL_SUPPORT=ON \
 		-DBUILD_TESTS=ON \
 		-DBUILD_TOOLS=ON
-	make
+	make -C build
 }
 
 check() {
-	cd "$builddir"/build
+	cd build
 	ctest -E basic
 }
 
 package() {
-	cd "$builddir"/build
-	make DESTDIR="$pkgdir" install
+	make -C build DESTDIR="$pkgdir" install
 	rm -f "$pkgdir"/usr/lib/*.a
 }
 
