main/lua-yaml: modernize

--- a/main/lua-yaml/APKBUILD
+++ b/main/lua-yaml/APKBUILD
@@ -4,14 +4,12 @@
 pkgname=lua-yaml
 _pkgname=yaml
 pkgver=1.1.2
-pkgrel=1
+pkgrel=2
 pkgdesc="LibYaml binding for Lua"
 url="http://yaml.luaforge.net"
 arch="all"
 license="MIT"
-depends=""
 makedepends="cmake yaml-dev"
-subpackages=""
 source="$pkgname-$pkgver.tar.gz::https://github.com/lubyk/$_pkgname/archive/REL-$pkgver.tar.gz
 	cmake.patch"
 builddir="$srcdir/$_pkgname-REL-$pkgver"
@@ -34,10 +32,11 @@ build() {
 			-DCMAKE_CXX_FLAGS="$CXXFLAGS" \
 			-DCMAKE_SKIP_RPATH=TRUE \
 			-DCMAKE_VERBOSE_MAKEFILE=TRUE \
+			-DCMAKE_BUILD_TYPE=None \
 			-DLUA_INSTALL_DIR=/usr/share/lua/$lver \
 			-DLUA_INSTALL_BINDIR=/usr/lib/lua/$lver \
-			"$builddir" || return 1
-		make || return 1
+			"$builddir"
+		make
 	done
 }
 
