main/librsync: modernize

--- a/main/librsync/APKBUILD
+++ b/main/librsync/APKBUILD
@@ -2,7 +2,7 @@
 # Maintainer: Jeremy Thomerson <jeremy@thomersonfamily.com>
 pkgname=librsync
 pkgver=2.2.1
-pkgrel=0
+pkgrel=1
 pkgdesc="librsync implements the rolling-checksum algorithm of rsync"
 url="https://github.com/librsync/librsync"
 arch="all"
@@ -18,23 +18,19 @@ prepare() {
 }
 
 build() {
-	cd "$builddir"
-	cmake \
-		-DCMAKE_BUILD_TYPE=release \
+	cmake -B build . \
+		-DCMAKE_BUILD_TYPE=None \
 		-DCMAKE_INSTALL_LIBDIR=lib \
-		-DCMAKE_INSTALL_PREFIX=/usr \
-		.
-	make
-
+		-DCMAKE_INSTALL_PREFIX=/usr
+	make -C build
 }
 
 check() {
-	make check
+	make -C build check
 }
 
 package() {
-	cd "$builddir"
-	make DESTDIR="$pkgdir" install
+	make -C build DESTDIR="$pkgdir" install
 	install -D -m644 doc/rdiff.1 "$pkgdir/usr/share/man/man1/rdiff.1"
 	install -D -m644 doc/librsync.3 "$pkgdir/usr/share/man/man3/librsync.3"
 }
