main/libproxy: modernize

--- a/main/libproxy/APKBUILD
+++ b/main/libproxy/APKBUILD
@@ -2,7 +2,7 @@
 # Maintainer: Natanael Copa <ncopa@alpinelinux.org>
 pkgname=libproxy
 pkgver=0.4.15
-pkgrel=4
+pkgrel=5
 pkgdesc="A library handling all the details of proxy configuration"
 url="https://github.com/libproxy/libproxy"
 arch="all"
@@ -16,26 +16,24 @@ source="$pkgname-$pkgver.tar.gz::https://github.com/libproxy/libproxy/archive/$p
 	"
 
 build() {
-	cd "$builddir"
-	cmake \
+	cmake -B build . \
+		-DCMAKE_BUILD_TYPE=None \
 		-DCMAKE_INSTALL_PREFIX=/usr \
 		-DLIBEXEC_INSTALL_DIR=lib \
 		-DMODULE_INSTALL_DIR=/usr/lib/libproxy/$pkgver/modules \
 		-DWITH_PERL=OFF \
 		-DWITH_PYTHON3=ON \
-		-DPYTHON3_EXECUTABLE=/usr/bin/python3 \
-		.
-	make
+		-DPYTHON3_EXECUTABLE=/usr/bin/python3
+	make -C build
 }
 
 check() {
-	cd "$builddir"
+	cd build
 	CTEST_OUTPUT_ON_FAILURE=TRUE ctest
 }
 
 package() {
-	cd "$builddir"
-	make DESTDIR="$pkgdir" install
+	make -C build DESTDIR="$pkgdir" install
 }
 
 dev() {
