--- a/main/libical/APKBUILD
+++ b/main/libical/APKBUILD
@@ -2,7 +2,7 @@
 # Maintainer: Natanael Copa <ncopa@alpinelinux.org>
 pkgname=libical
 pkgver=3.0.7
-pkgrel=1
+pkgrel=2
 pkgdesc="Reference implementation of the iCalendar format"
 url="https://libical.github.io/libical/"
 arch="all"
@@ -13,31 +13,27 @@ makedepends="$depends_dev perl cmake glib-dev icu-dev libxml2-dev
 checkdepends="tzdata py3-gobject3"
 subpackages="$pkgname-dev"
 source="https://github.com/libical/libical/releases/download/v$pkgver/libical-$pkgver.tar.gz"
-builddir="$srcdir/$pkgname-$pkgver/build"
 
-prepare() {
-	mkdir "$builddir"
-	default_prepare
-}
 
 build() {
-	cmake .. \
-		-DCMAKE_RELEASE_TYPE=Release \
+	cmake -B build . \
+		-DCMAKE_BUILD_TYPE=None \
 		-DCMAKE_INSTALL_PREFIX=/usr \
 		-DCMAKE_INSTALL_LIBDIR=lib \
 		-DSHARED_ONLY=true \
 		-DENABLE_GTK_DOC=false \
 		-DGOBJECT_INTROSPECTION=true \
 		-DICAL_GLIB_VAPI=true
-	make
+	make -C build
 }
 
 check() {
+	cd build
 	ctest -E regression
 }
 
 package() {
-	make DESTDIR="$pkgdir" install
+	make -C build DESTDIR="$pkgdir" install
 }
 
 sha512sums="4e1df3fad9c9df795da441243471d05168287519b6155b148b5aa28092ecac687626fa92713b280864a41f6ffc0c7fb43d2770fb1821396cb838e96e76d8d9d8  libical-3.0.7.tar.gz"
