--- a/main/graphite2/APKBUILD
+++ b/main/graphite2/APKBUILD
@@ -3,7 +3,7 @@
 pkgname=graphite2
 _realname=${pkgname/2/}
 pkgver=1.3.13
-pkgrel=1
+pkgrel=2
 pkgdesc="reimplementation of the SIL Graphite text processing engine"
 url="http://graphite.sil.org/"
 arch="all"
@@ -19,33 +19,29 @@ source="$pkgname-$pkgver.tar.gz::https://github.com/silnrsi/$_realname/archive/$
 builddir="$srcdir"/$_realname-$pkgver
 
 build() {
-	cd "$builddir"
-
 	# static and shared version needs to be build in separated dirs
 	# See https://github.com/silnrsi/graphite/pull/12#issuecomment-311756732
 
 	# shared
 	mkdir build && cd build
 	cmake -G "Unix Makefiles" .. \
-		-DCMAKE_C_FLAGS:STRING="${CFLAGS}" \
+		-DCMAKE_C_FLAGS:STRING="$CFLAGS" \
 		-DCMAKE_INSTALL_PREFIX=/usr \
-		-DCMAKE_BUILD_TYPE:STRING=Release \
+		-DCMAKE_BUILD_TYPE:STRING=None \
 		-DGRAPHITE2_COMPARE_RENDERER=OFF \
-		-DGRAPHITE2_NFILEFACE=ON \
-
+		-DGRAPHITE2_NFILEFACE=ON
 	make
 
 	# static
 	cd ..
 	mkdir build-static && cd build-static
 	cmake -G "Unix Makefiles" .. \
-		-DCMAKE_C_FLAGS:STRING="${CFLAGS}" \
+		-DCMAKE_C_FLAGS:STRING="$CFLAGS" \
 		-DCMAKE_INSTALL_PREFIX=/usr \
-		-DCMAKE_BUILD_TYPE:STRING=Release \
+		-DCMAKE_BUILD_TYPE:STRING=None \
 		-DGRAPHITE2_COMPARE_RENDERER=OFF \
 		-DGRAPHITE2_NFILEFACE=ON \
 		-DBUILD_SHARED_LIBS=OFF
-
 	make
 }
 
