main/ddate: modernize

--- a/main/ddate/APKBUILD
+++ b/main/ddate/APKBUILD
@@ -2,31 +2,24 @@
 # Maintainer: Johannes Matheis <jomat+alpinebuild@jmt.gr>
 pkgname=ddate
 pkgver=0.2.2
-pkgrel=0
+pkgrel=1
 pkgdesc="Convert Gregorian dates to Discordian dates"
 url="https://github.com/bo0ts/ddate"
 arch="all"
 license="Public-Domain"
-depends=""
-depends_dev=""
-makedepends="$depends_dev cmake"
-install=""
+makedepends="cmake"
 subpackages="$pkgname-doc"
-source="ddate-$pkgver.tar.gz::${url}/archive/v${pkgver}.tar.gz"
-
-_builddir="${srcdir}/${pkgname}-${pkgver}"
+source="ddate-$pkgver.tar.gz::$url/archive/v$pkgver.tar.gz"
 
 build() {
-	cd "$_builddir"
-	mkdir build
-	cd build
-	cmake .. -DCMAKE_INSTALL_PREFIX=/usr
-	make PREFIX="/usr"
+	cmake -B build . \
+		-DCMAKE_BUILD_TYPE=None \
+		-DCMAKE_INSTALL_PREFIX=/usr
+	make -C build
 }
 
 package() {
-	cd "$_builddir/build"
-	make DESTDIR="${pkgdir}" install
+	make -C build DESTDIR="$pkgdir" install
 }
 
 sha512sums="5d148e030bee392eb93c5ae519061af0736f2f75eaae916e3efaf927d9f4de8cc72afc4a5121b6fbc0264b73e9f580330a38b97bb78837d447d0b4c1fc29ec06  ddate-0.2.2.tar.gz"
