main/arpon: modernize

--- a/main/arpon/APKBUILD
+++ b/main/arpon/APKBUILD
@@ -3,34 +3,31 @@
 pkgname=arpon
 pkgver=3.0
 _realver=3.0-ng
-pkgrel=2
+pkgrel=3
 pkgdesc="Arp handler inspectiON is a handler daemon with tools to handle all ARP aspects"
 url="http://arpon.sourceforge.net/"
 arch="all"
-license="BSD"
-depends=""
+license="BSD-2-Clause"
 makedepends="libdnet-dev libpcap-dev libnet-dev cmake"
-install=""
-subpackages="$pkgname-doc"
-source="https://downloads.sourceforge.net/project/${pkgname}/${pkgname}/ArpON-${_realver}.tar.gz
-		fix-ppc64le-werror.patch
-		arpon-gcc8.patch
-		arpon.initd
-		arpon.confd
-		"
+subpackages="$pkgname-doc $pkgname-openrc"
+source="https://downloads.sourceforge.net/project/arpon/arpon/ArpON-$_realver.tar.gz
+	fix-ppc64le-werror.patch
+	arpon-gcc8.patch
+	arpon.initd
+	arpon.confd
+	"
 
 builddir="$srcdir"/ArpON-$_realver
 
 build() {
-	cd "$builddir"
-	mkdir build && cd build
-	cmake .. -DCMAKE_C_FLAGS="$CFLAGS"
-	make || return 1
+	cmake -B build . \
+		-DCMAKE_C_FLAGS="$CFLAGS" \
+		-DCMAKE_BUILD_TYPE=None
+	make -C build
 }
 
 package() {
-	cd "$builddir"/build
-	make install DESTDIR="$pkgdir" || return 1
+	make -C build install DESTDIR="$pkgdir"
 	install -m755 -D "$srcdir"/$pkgname.initd "$pkgdir"/etc/init.d/$pkgname
 	install -m644 -D "$srcdir"/$pkgname.confd "$pkgdir"/etc/conf.d/$pkgname
 }
