main/*: add --buildtype=plain to meson packages which don't specify a buildtype

--- a/main/d-feet/APKBUILD
+++ b/main/d-feet/APKBUILD
@@ -3,7 +3,7 @@
 pkgname=d-feet
 pkgver=0.3.15
 _v=${pkgver%.*}
-pkgrel=1
+pkgrel=2
 pkgdesc="A powerful D-Bus Debugger"
 options="!check" # Testsuite loops infinitely
 url="https://wiki.gnome.org/action/show/Apps/DFeet"
@@ -23,6 +23,7 @@ build() {
 	cd "$builddir"
 	meson \
 		--prefix=/usr \
+		--buildtype=plain \
 		-Dtests=false \
 		output
 	ninja -C output
