--- a/main/libdrm/APKBUILD
+++ b/main/libdrm/APKBUILD
@@ -1,7 +1,7 @@
 # Maintainer: Natanael Copa <ncopa@alpinelinux.org>
 pkgname=libdrm
 pkgver=2.4.100
-pkgrel=0
+pkgrel=1
 pkgdesc="Userspace interface to kernel DRM services"
 url="https://dri.freedesktop.org/"
 arch="all"
@@ -21,6 +21,7 @@ build() {
 	cd "$builddir"/builddir
 	meson \
 		-Dprefix=/usr \
+		--buildtype=plain \
 		-Dfreedreno=true \
 		-Dtegra=true \
 		-Detnaviv=true \
