--- a/main/libfprint/APKBUILD
+++ b/main/libfprint/APKBUILD
@@ -2,7 +2,7 @@
 # Maintainer: Timo Teräs <timo.teras@iki.fi>
 pkgname=libfprint
 pkgver=1.0
-pkgrel=0
+pkgrel=1
 pkgdesc="fingerprint reader and identification library"
 url="https://fprint.freedesktop.org/"
 arch="all"
@@ -24,6 +24,7 @@ build() {
 	cd "$builddir"
 	meson \
 		--prefix /usr \
+		--buildtype=plain \
 		-Dx11-examples=false \
 		-Ddoc=false \
 		output
