--- a/main/libnice/APKBUILD
+++ b/main/libnice/APKBUILD
@@ -3,7 +3,7 @@
 # Maintainer: Natanael Copa <ncopa@alpinelinux.org>
 pkgname=libnice
 pkgver=0.1.16
-pkgrel=0
+pkgrel=1
 pkgdesc="GLib ICE implementation"
 options="!check" # Testsuite fails
 url="https://nice.freedesktop.org/wiki/"
@@ -25,15 +25,16 @@ source="https://nice.freedesktop.org/releases/libnice-$pkgver.tar.gz"
 
 build() {
 	meson --prefix=/usr \
-		  --libdir=/usr/lib \
-		  --bindir=/usr/bin \
-		  -Dgtk_doc=enabled \
-		  -Dtests=disabled \
-		  -Dexamples=disabled \
-		  -Dintrospection=enabled \
-		  -Dcrypto-library=gnutls \
-		  -Dgstreamer=enabled \
-		  -Dgupnp=disabled builddir
+		--libdir=/usr/lib \
+		--bindir=/usr/bin \
+		--buildtype=plain \
+		-Dgtk_doc=enabled \
+		-Dtests=disabled \
+		-Dexamples=disabled \
+		-Dintrospection=enabled \
+		-Dcrypto-library=gnutls \
+		-Dgstreamer=enabled \
+		-Dgupnp=disabled builddir
 	ninja -C builddir
 }
 
