--- a/main/libva-glx/APKBUILD
+++ b/main/libva-glx/APKBUILD
@@ -4,7 +4,7 @@
 
 pkgname=libva-glx
 pkgver=2.6.1
-pkgrel=0
+pkgrel=1
 pkgdesc="Video Acceleration (VA) API for Linux with MESA support"
 url="https://01.org/linuxmedia"
 arch="all"
@@ -29,7 +29,8 @@ prepare() {
 
 build() {
 	meson builddir \
-		--prefix=/usr\
+		--prefix=/usr \
+		--buildtype=plain \
 		-Dwith_glx=yes \
 		-Dwith_wayland=yes
 	ninja -C builddir
