--- a/main/libva-intel-driver/APKBUILD
+++ b/main/libva-intel-driver/APKBUILD
@@ -2,7 +2,7 @@
 # Maintainer: Natanael Copa <ncopa@alpinelinux.org>
 pkgname=libva-intel-driver
 pkgver=2.4.0
-pkgrel=0
+pkgrel=1
 pkgdesc="VA-API implementation for Intel GMA chipsets and Intel HD Graphics"
 url="https://freedesktop.org/wiki/Software/vaapi"
 arch="x86 x86_64"
@@ -16,6 +16,7 @@ builddir="$srcdir"/intel-vaapi-driver-$pkgver.pre1
 build() {
 	meson builddir \
 		--prefix=/usr \
+		--buildtype=plain \
 		-Dwith_wayland=yes \
 		-Dwith_x11=yes
 	ninja -C builddir
