--- a/main/libxkbcommon/APKBUILD
+++ b/main/libxkbcommon/APKBUILD
@@ -2,7 +2,7 @@
 # Maintainer: Leo <thinkabit.ukim@gmail.com>
 pkgname=libxkbcommon
 pkgver=0.10.0
-pkgrel=0
+pkgrel=1
 pkgdesc="a keyboard handling library"
 url="https://www.xkbcommon.org/"
 arch="all"
@@ -23,6 +23,7 @@ builddir="$srcdir/libxkbcommon-xkbcommon-$pkgver"
 build() {
 	meson \
 		--prefix=/usr \
+		--buildtype=plain \
 		-Denable-wayland=true \
 		-Denable-docs=false \
 		-Denable-x11=true \
