--- a/main/libnotify/APKBUILD
+++ b/main/libnotify/APKBUILD
@@ -2,7 +2,7 @@
 # Maintainer: Natanael Copa <ncopa@alpinelinux.org>
 pkgname=libnotify
 pkgver=0.7.9
-pkgrel=0
+pkgrel=1
 pkgdesc="Desktop notification library"
 url="https://developer.gnome.org/notification-spec/"
 arch="all"
@@ -15,6 +15,7 @@ source="https://download.gnome.org/sources/libnotify/${pkgver%.*}/libnotify-$pkg
 build() {
 	meson \
 		--prefix=/usr \
+		--buildtype=plain \
 		-Dtests=true \
 		-Dintrospection=enabled \
 		-Dgtk_doc=false \
