community/*: add --buildtype=plain to meson packages which don't specify a buildtype

--- a/community/colord-gtk/APKBUILD
+++ b/community/colord-gtk/APKBUILD
@@ -2,7 +2,7 @@
 # Maintainer: Kevin Daudt <ops@ikke.info>
 pkgname=colord-gtk
 pkgver=0.2.0
-pkgrel=0
+pkgrel=1
 pkgdesc="GTK support library for colord"
 options="!check" # Requires bus session
 url="https://www.freedesktop.org/software/colord/"
@@ -16,6 +16,7 @@ source="https://www.freedesktop.org/software/colord/releases/colord-gtk-$pkgver.
 build() {
 	meson \
 		--prefix=/usr \
+		--buildtype=plain \
 		-Dgtk2=false \
 		-Dvapi=true \
 		-Dtests=true \
