--- a/community/colord/APKBUILD
+++ b/community/colord/APKBUILD
@@ -3,7 +3,7 @@
 # Maintainer: Kevin Daudt <kdaudt@alpinelinux.org>
 pkgname=colord
 pkgver=1.4.4
-pkgrel=4
+pkgrel=5
 pkgdesc="System daemon for managing color devices"
 url="http://www.freedesktop.org/software/colord"
 arch="all"
@@ -21,6 +21,7 @@ install="colord.pre-install colord.pre-upgrade"
 build() {
 	meson \
 		--prefix=/usr \
+		--buildtype=plain \
 		--sysconfdir=/etc \
 		--mandir=/usr/share/man \
 		--infodir=/usr/share/info \
