--- a/community/ghex/APKBUILD
+++ b/community/ghex/APKBUILD
@@ -3,7 +3,7 @@
 pkgname=ghex
 pkgver=3.18.4
 _pkgver=${pkgver%.*}
-pkgrel=0
+pkgrel=1
 pkgdesc="A hex editor for GNOME"
 url="https://wiki.gnome.org/Apps/Ghex"
 arch="all"
@@ -16,6 +16,7 @@ source="https://download.gnome.org/sources/ghex/$_pkgver/ghex-$pkgver.tar.xz"
 build() {
 	meson \
 		--prefix=/usr \
+		--buildtype=plain \
 		. output
 	ninja -C output
 }
