--- a/community/girara/APKBUILD
+++ b/community/girara/APKBUILD
@@ -4,7 +4,7 @@
 # Maintainer: Jean-Louis Fuchs <ganwell@fangorn.ch>
 pkgname=girara
 pkgver=0.3.4
-pkgrel=0
+pkgrel=1
 pkgdesc="girara - gtk user interface that focuses on simplicity and minimalism"
 url="https://git.pwmt.org/pwmt/girara"
 arch="all"
@@ -18,7 +18,7 @@ source="https://git.pwmt.org/pwmt/girara/-/archive/$pkgver/girara-$pkgver.tar.gz
 
 
 build() {
-	meson build --prefix=/usr
+	meson build --prefix=/usr --buildtype=plain
 	ninja -C build
 }
 
