--- a/community/gnome-session/APKBUILD
+++ b/community/gnome-session/APKBUILD
@@ -2,7 +2,7 @@
 # Maintainer: Rasmus Thomsen <oss@cogitri.dev>
 pkgname=gnome-session
 pkgver=3.34.2
-pkgrel=2
+pkgrel=3
 pkgdesc="GNOME session manager"
 url="https://gitlab.gnome.org/GNOME/gnome-session"
 arch="all !s390x !ppc64le"
@@ -22,6 +22,7 @@ build() {
 		--prefix=/usr \
 		--sysconfdir=/etc \
 		--localstatedir=/var \
+		--buildtype=plain \
 		-Dsystemd_journal=true \
 		. output
 	ninja -C output
