--- a/community/jsoncpp/APKBUILD
+++ b/community/jsoncpp/APKBUILD
@@ -1,7 +1,7 @@
 # Maintainer: Natanael Copa <ncopa@alpinelinux.org>
 pkgname=jsoncpp
 pkgver=1.9.2
-pkgrel=0
+pkgrel=1
 pkgdesc="JSON C++ library"
 # Disable tests to unblock builder
 # ../src/test_lib_json/main.cpp(3370): expected == result
@@ -21,7 +21,12 @@ source="$pkgname-$pkgver.tar.gz::https://github.com/open-source-parsers/jsoncpp/
 build() {
 	# we cannot use cmake since jsoncpp is a dependency for cmake which
 	# means we would get circular buildtime deps
-	meson --prefix /usr --libdir /usr/lib --buildtype release --default-library both . build
+	meson \
+		--prefix=/usr \
+		--libdir=/usr/lib \
+		--buildtype=plain \
+		--default-library=both \
+		build
 	ninja -C build
 }
 
