--- a/community/libgusb/APKBUILD
+++ b/community/libgusb/APKBUILD
@@ -2,7 +2,7 @@
 # Maintainer: Francesco Colista <fcolista@alpinelinux.org>
 pkgname=libgusb
 pkgver=0.3.4
-pkgrel=0
+pkgrel=1
 pkgdesc="GLib wrapper around libusb"
 url="https://github.com/hughsie/libgusb"
 arch="all"
@@ -24,7 +24,8 @@ build() {
 		--sysconfdir=/etc \
 		--mandir=/usr/share/man \
 		--infodir=/usr/share/info \
-		--localstatedir=/var
+		--localstatedir=/var \
+		--buildtype=plain
 	ninja -C output
 }
 
