--- a/community/libwacom/APKBUILD
+++ b/community/libwacom/APKBUILD
@@ -2,7 +2,7 @@
 # Maintainer: Ivan Tham <pickfire@riseup.net>
 pkgname=libwacom
 pkgver=1.2
-pkgrel=0
+pkgrel=1
 pkgdesc="Library to help implement Wacom tablet settings"
 url="https://github.com/linuxwacom/libwacom/wiki"
 arch="all !s390x" # librsvg
@@ -17,6 +17,7 @@ source="https://github.com/linuxwacom/libwacom/releases/download/libwacom-$pkgve
 build() {
 	meson \
 		--prefix=/usr \
+		--buildtype=plain \
 		. output
 	ninja -C output
 }
