--- a/community/low-memory-monitor/APKBUILD
+++ b/community/low-memory-monitor/APKBUILD
@@ -2,7 +2,7 @@
 # Maintainer: Leo <thinkabit.ukim@gmail.com>
 pkgname=low-memory-monitor
 pkgver=2.0
-pkgrel=2
+pkgrel=3
 pkgdesc="Daemon to monitor memory usage and signal processes and the kernel"
 options="!check" # No testsuite
 url="https://gitlab.freedesktop.org/hadess/low-memory-monitor"
@@ -20,6 +20,7 @@ build() {
 		--prefix=/usr \
 		--sysconfdir=/etc \
 		--localstatedir=/var \
+		--buildtype=plain \
 		-Dgtk_doc=false \
 		-Dsystemdsystemunitdir=/DELETEME \
 		. output
