--- a/community/networkmanager-elogind/APKBUILD
+++ b/community/networkmanager-elogind/APKBUILD
@@ -3,7 +3,7 @@
 # Maintainer: Rasmus Thomsen <oss@cogitri.dev>
 pkgname=networkmanager-elogind
 pkgver=1.22.8
-pkgrel=1
+pkgrel=2
 pkgdesc="Network Management daemon"
 url="https://wiki.gnome.org/Projects/NetworkManager"
 arch="all"
@@ -66,6 +66,7 @@ build() {
 		--prefix=/usr \
 		--sysconfdir=/etc \
 		--localstatedir=/var \
+		--buildtype=plain \
 		-Dsystemdsystemunitdir=no \
 		-Dudev_dir=/lib/udev \
 		-Diptables=/sbin/iptables \
