--- a/community/phodav/APKBUILD
+++ b/community/phodav/APKBUILD
@@ -1,7 +1,7 @@
 # Maintainer: Natanael Copa <ncopa@alpinelinux.org>
 pkgname=phodav
 pkgver=2.3
-pkgrel=1
+pkgrel=2
 pkgdesc="A WebDAV server using libsoup"
 url="https://wiki.gnome.org/phodav"
 arch="all"
@@ -26,6 +26,7 @@ build() {
 		--mandir=/usr/share/man \
 		--infodir=/usr/share/info \
 		--localstatedir=/var \
+		--buildtype=plain \
 		-Davahi=enabled \
 		-Dsystemd=disabled \
 		-Dudev=enabled
