--- a/community/py3-gst/APKBUILD
+++ b/community/py3-gst/APKBUILD
@@ -2,7 +2,7 @@
 # Maintainer:
 pkgname=py3-gst
 pkgver=1.16.2
-pkgrel=0
+pkgrel=1
 pkgdesc="GStreamer Python3 bindings"
 url="https://cgit.freedesktop.org/gstreamer/gst-python/"
 arch="all"
@@ -21,6 +21,7 @@ build()	{
 		--sysconfdir=/etc \
 		--mandir=/usr/share/man \
 		--localstatedir=/var \
+		--buildtype=plain \
 		-Dpython=/usr/bin/python3 \
 		. output
 	ninja -C output
