--- a/community/spice-gtk/APKBUILD
+++ b/community/spice-gtk/APKBUILD
@@ -2,7 +2,7 @@
 # Maintainer: Natanael Copa <ncopa@alpinelinux.org>
 pkgname=spice-gtk
 pkgver=0.37
-pkgrel=1
+pkgrel=2
 pkgdesc="A GTK+ widget for SPICE clients"
 url="http://spice-space.org/page/Spice-Gtk"
 arch="all"
@@ -46,6 +46,7 @@ source="https://www.spice-space.org/download/gtk/spice-gtk-$pkgver.tar.bz2
 build() {
 	meson \
 		--prefix=/usr \
+		--buildtype=plain \
 		-Dgtk=enabled \
 		-Dwebdav=disabled \
 		-Dpulse=disabled \
