--- a/community/swaybg/APKBUILD
+++ b/community/swaybg/APKBUILD
@@ -2,7 +2,7 @@
 # Maintainer: Drew DeVault <sir@cmpwn.com>
 pkgname=swaybg
 pkgver=1.0
-pkgrel=1
+pkgrel=2
 pkgdesc="Wallpaper daemon for Wayland"
 url="https://swaywm.org"
 arch="all"
@@ -21,7 +21,11 @@ subpackages="$pkgname-doc"
 source="$pkgname-$pkgver.tar.gz::https://github.com/swaywm/swaybg/archive/$pkgver.tar.gz"
 
 build() {
-	meson -Dswaybg-version="$pkgver" --prefix /usr build
+	meson \
+		--prefix=/usr \
+		--buildtype=plain \
+		-Dswaybg-version="$pkgver" \
+		build
 	ninja -C build
 }
 
