--- a/community/swayidle/APKBUILD
+++ b/community/swayidle/APKBUILD
@@ -2,7 +2,7 @@
 # Maintainer: Drew DeVault <sir@cmpwn.com>
 pkgname=swayidle
 pkgver=1.6
-pkgrel=1
+pkgrel=2
 pkgdesc="Idle management daemon for Wayland"
 url="https://swaywm.org"
 arch="all"
@@ -25,7 +25,11 @@ subpackages="
 source="$pkgname-$pkgver.tar.gz::https://github.com/swaywm/swayidle/archive/$pkgver.tar.gz"
 
 build() {
-	meson build -Dlogind=enabled -Dlogind-provider=elogind --prefix /usr
+	meson build \
+		--prefix=/usr \
+		--buildtype=plain \
+		-Dlogind=enabled \
+		-Dlogind-provider=elogind
 	ninja -C build
 }
 
