--- a/community/swaylock/APKBUILD
+++ b/community/swaylock/APKBUILD
@@ -2,7 +2,7 @@
 # Maintainer: Drew DeVault <sir@cmpwn.com>
 pkgname=swaylock
 pkgver=1.5
-pkgrel=2
+pkgrel=3
 pkgdesc="Screen locker for Wayland"
 url="https://swaywm.org"
 arch="all"
@@ -47,7 +47,10 @@ prepare() {
 }
 
 build() {
-	meson --prefix /usr build
+	meson \
+		--prefix=/usr \
+		--buildtype=plain \
+		build
 	ninja -C build
 }
 
