--- a/community/virglrenderer/APKBUILD
+++ b/community/virglrenderer/APKBUILD
@@ -2,7 +2,7 @@
 # Maintainer: Fernando Casas Schossow <casasfernando@outlook.com>
 pkgname=virglrenderer
 pkgver=0.8.2
-pkgrel=0
+pkgrel=1
 pkgdesc="A virtual 3D GPU library, that allows the guest operating system to use the host GPU to accelerate 3D rendering"
 url="https://virgil3d.github.io/"
 options="!check"
@@ -17,6 +17,7 @@ builddir="$srcdir/$pkgname-$pkgname-$pkgver"
 build() {
 	meson \
 		--prefix=/usr \
+		--buildtype=plain \
 		-Dtests=true \
 	. output
 	ninja -C output
