--- a/community/wlroots/APKBUILD
+++ b/community/wlroots/APKBUILD
@@ -2,7 +2,7 @@
 # Maintainer: Drew DeVault <sir@cmpwn.com>
 pkgname=wlroots
 pkgver=0.10.0
-pkgrel=0
+pkgrel=1
 pkgdesc="A modular Wayland compositor library"
 url="https://github.com/swaywm/wlroots"
 arch="all"
@@ -30,8 +30,9 @@ source="$pkgname-$pkgver.tar.gz::https://github.com/swaywm/$pkgname/archive/$pkg
 
 build() {
 	meson \
-		--prefix /usr \
-		--libdir /usr/lib \
+		--prefix=/usr \
+		--libdir=/usr/lib \
+		--buildtype=plain \
 		-Dlogind=enabled \
 		-Dlogind-provider=elogind \
 		-Dexamples=false \
