--- a/community/zathura-ps/APKBUILD
+++ b/community/zathura-ps/APKBUILD
@@ -18,7 +18,9 @@ builddir="$srcdir/$pkgname-$pkgver"
 
 build() {
 	cd "$builddir"
-	meson build --prefix=/usr
+	meson build \
+		--prefix=/usr \
+		--buildtype=plain
 	ninja -C build
 }
 
