--- a/community/zathura/APKBUILD
+++ b/community/zathura/APKBUILD
@@ -4,7 +4,7 @@
 # Maintainer: Jean-Louis Fuchs <ganwell@fangorn.ch>
 pkgname=zathura
 pkgver=0.4.5
-pkgrel=0
+pkgrel=1
 pkgdesc="zathura - highly customizable and functional document viewer"
 url="https://git.pwmt.org/pwmt/zathura"
 arch="all"
@@ -18,7 +18,9 @@ source="https://git.pwmt.org/pwmt/zathura/-/archive/$pkgver/zathura-$pkgver.tar.
 	"
 
 build() {
-	meson build --prefix=/usr
+	meson build \
+		--prefix=/usr \
+		--buildtype=plain
 	ninja -C build
 }
 
