--- a/community/accountsservice/APKBUILD
+++ b/community/accountsservice/APKBUILD
@@ -2,7 +2,7 @@
 # Maintainer: Natanael Copa <ncopa@alpinelinux.org>
 pkgname=accountsservice
 pkgver=0.6.55
-pkgrel=0
+pkgrel=1
 pkgdesc="D-Bus interface for user account query and manipulation"
 options="!check" # No testsuite
 url="https://www.freedesktop.org/software/accountsservice/"
@@ -24,6 +24,7 @@ source="https://www.freedesktop.org/software/accountsservice/accountsservice-$pk
 build() {
 	meson \
 		--prefix=/usr \
+		--buildtype=plain \
 		-Dlibdir=lib \
 		-Dsystemdsystemunitdir=no \
 		-Dsystemd=false \
