--- a/community/elogind/APKBUILD
+++ b/community/elogind/APKBUILD
@@ -2,7 +2,7 @@
 # Maintainer: Leo <thinkabit.ukim@gmail.com>
 pkgname=elogind
 pkgver=243.4
-pkgrel=2
+pkgrel=3
 pkgdesc="Standalone fork of systemd's elogind"
 url="https://github.com/elogind/elogind"
 arch="all"
@@ -47,6 +47,7 @@ build() {
 	meson \
 		--libdir=/usr/lib \
 		--libexecdir=/usr/libexec \
+		--buildtype=plain \
 		-Dprefix=/usr \
 		-Dcgroup-controller=elogind \
 		-Dhalt-path=/sbin/halt \
