--- a/community/eog/APKBUILD
+++ b/community/eog/APKBUILD
@@ -2,7 +2,7 @@
 # Maintainer: Rasmus Thomsen <oss@cogitri.dev>
 pkgname=eog
 pkgver=3.34.2
-pkgrel=0
+pkgrel=1
 pkgdesc="An image viewer for GNOME"
 url="https://wiki.gnome.org/Apps/EyeOfGnome"
 arch="all !s390x"
@@ -17,6 +17,7 @@ source="https://download.gnome.org/sources/eog/${pkgver%.*}/eog-$pkgver.tar.xz"
 build() {
 	meson \
 		--prefix=/usr \
+		--buildtype=plain \
 		--sysconfdir=/etc \
 		--libdir=/usr/lib \
 		--localstatedir=/var \
