--- a/community/gnome-system-monitor/APKBUILD
+++ b/community/gnome-system-monitor/APKBUILD
@@ -1,7 +1,7 @@
 # Maintainer: Rasmus Thomsen <oss@cogitri.dev>
 pkgname=gnome-system-monitor
 pkgver=3.32.1
-pkgrel=0
+pkgrel=1
 pkgdesc="GNOME system monitor"
 url="https://www.gnome.org/"
 arch="all !s390x"
@@ -18,6 +18,7 @@ build() {
 		--sysconfdir=/etc \
 		--localstatedir=/var \
 		--datadir=/usr/share \
+		--buildtype=plain \
 		-Dsystemd=false \
 		output .
 	ninja -C output
