--- a/community/hexchat/APKBUILD
+++ b/community/hexchat/APKBUILD
@@ -1,7 +1,7 @@
 # Maintainer: Natanael Copa <ncopa@alpinelinux.org>
 pkgname=hexchat
 pkgver=2.14.3
-pkgrel=1
+pkgrel=2
 pkgdesc="Graphical IRC client based on XChat"
 url="https://hexchat.github.io"
 arch="all !armhf !armv7"
@@ -14,6 +14,7 @@ source="https://dl.hexchat.net/hexchat/hexchat-$pkgver.tar.xz
 
 build() {
 	meson --prefix=/usr \
+		--buildtype=plain \
 		-Dwith-perl=false \
 		-Dwith-lua=lua5.3 \
 		-Dwith-sysinfo=false \
