--- a/community/libosinfo/APKBUILD
+++ b/community/libosinfo/APKBUILD
@@ -2,7 +2,7 @@
 # Maintainer: Natanael Copa <ncopa@alpinelinux.org>
 pkgname=libosinfo
 pkgver=1.7.1
-pkgrel=0
+pkgrel=1
 pkgdesc="A library for managing OS information for virtualization"
 url="https://libosinfo.org/"
 arch="all"
@@ -29,6 +29,7 @@ builddir="$srcdir/libosinfo-v$pkgver"
 build() {
 	meson \
 		--prefix=/usr \
+		--buildtype=plain \
 		-Denable-gtk-doc=false \
 		-Denable-introspection=enabled \
 		-Denable-tests=true \
