--- a/community/mako/APKBUILD
+++ b/community/mako/APKBUILD
@@ -1,7 +1,7 @@
 # Maintainer: Drew DeVault <sir@cmpwn.com>
 pkgname=mako
 pkgver=1.4.1
-pkgrel=0
+pkgrel=1
 pkgdesc="A lightweight notification daemon for Wayland"
 url="https://wayland.emersion.fr/mako/"
 arch="all"
@@ -24,8 +24,9 @@ source="$pkgname-$pkgver.tar.gz::https://github.com/emersion/mako/archive/v$pkgv
 
 build() {
 	meson \
-		--prefix /usr \
-		--libdir /usr/lib \
+		--prefix=/usr \
+		--libdir=/usr/lib \
+		--buildtype=plain \
 		-Dicons=enabled \
 		. build
 	ninja -C build
