--- a/community/nautilus/APKBUILD
+++ b/community/nautilus/APKBUILD
@@ -7,7 +7,7 @@
 
 pkgname=nautilus
 pkgver=3.34.2
-pkgrel=0
+pkgrel=1
 pkgdesc="GNOME file manager"
 url="https://wiki.gnome.org/Apps/Nautilus"
 arch="all !s390x"
@@ -26,6 +26,7 @@ build() {
 		--prefix=/usr \
 		--sysconfdir=/etc \
 		--localstatedir=/var \
+		--buildtype=plain \
 		-Dtests=headless \
 		. output
 	ninja -C output
