--- a/community/osinfo-db-tools/APKBUILD
+++ b/community/osinfo-db-tools/APKBUILD
@@ -2,7 +2,7 @@
 # Maintainer: Natanael Copa <ncopa@alpinelinux.org>
 pkgname=osinfo-db-tools
 pkgver=1.7.0
-pkgrel=0
+pkgrel=1
 pkgdesc="Tools for managing the osinfo database"
 url="https://libosinfo.org/"
 arch="all"
@@ -25,6 +25,7 @@ builddir="$srcdir/osinfo-db-tools-v$pkgver"
 build() {
 	meson \
 		--prefix=/usr \
+		--buildtype=plain \
 		. output
 	ninja -C output
 }
