--- a/community/totem-pl-parser/APKBUILD
+++ b/community/totem-pl-parser/APKBUILD
@@ -1,15 +1,15 @@
 # Contributor: Leo <thinkabit.ukim@gmail.com>
-# Maintainer:
+# Maintainer: Rasmus Thomsen <oss@cogitri.dev>
 pkgname=totem-pl-parser
 pkgver=3.26.5
-pkgrel=0
+pkgrel=1
 pkgdesc="GNOME playlist parser library"
-options="!check" # Requires gvfs with http support
 url="https://www.gnome.org/"
 arch="all"
 license="LGPL-2.0-or-later"
 makedepends="meson gnome-desktop-dev libsoup-dev libxml2-dev json-glib-dev
 	gmime-dev libxml2-utils libxslt itstool libarchive-dev libgcrypt-dev"
+options="!check" # doesn't detect gvfs' http support
 subpackages="$pkgname-dev $pkgname-lang"
 source="https://download.gnome.org/sources/totem-pl-parser/${pkgver%.*}/totem-pl-parser-$pkgver.tar.xz"
 
@@ -19,6 +19,7 @@ build() {
 		--sysconfdir=/etc \
 		--mandir=/usr/share/man \
 		--localstatedir=/var \
+		--buildtype=plain \
 		-Denable-libarchive=yes \
 		-Denable-libgcrypt=yes \
 		-Dintrospection=true \
