--- a/community/weston/APKBUILD
+++ b/community/weston/APKBUILD
@@ -2,7 +2,7 @@
 # Maintainer: Valery Kartel <valery.kartel@gmail.com>
 pkgname=weston
 pkgver=8.0.0
-pkgrel=0
+pkgrel=1
 _libname=lib$pkgname
 _libdir=$_libname-${pkgver%%.*}
 pkgdesc="The reference Wayland server"
@@ -39,6 +39,7 @@ install="$pkgname.pre-install"
 build() {
 	meson \
 		-Dprefix=/usr \
+		--buildtype=plain \
 		-Dlauncher-logind=true \
 		-Dsystemd=false \
 		-Dsimple-dmabuf-drm=auto \
