--- a/community/zathura-pdf-poppler/APKBUILD
+++ b/community/zathura-pdf-poppler/APKBUILD
@@ -14,7 +14,9 @@ makedepends="zathura-dev poppler-dev meson ninja"
 source="https://git.pwmt.org/pwmt/zathura-pdf-poppler/-/archive/$pkgver/zathura-pdf-poppler-$pkgver.tar.gz"
 
 build() {
-	meson build --prefix=/usr
+	meson build \
+		--prefix=/usr \
+		--buildtype=plain
 	ninja -C build
 }
 
